--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<font color="#111111">
 						<span class="say">Our Story</span><br>
 						<span class="say"> </span><br>
-						<span class="say"> For  阿铮 & kind</span><br>
+						<span class="say"> For  Livinial & KinD </span><br>
 						<span class="say"> </span><br>
 						<span class="say">还记得我们相识的时候吗,或许是缘分，或许是注定的。</span><br>
 						<span class="say"> </span><br>
